# TInjector

./: .gitignore  README.md
jni/: Android.mk  Application.mk  CMakeLists.txt  main.cpp
jni/core/: CMakeLists.txt  core.cpp  hide.cpp  hide.h  utils.cpp  utils.h
jni/core/elfio/: elf_types.hpp
jni/test/: CMakeLists.txt  testso.cpp  utils.cpp  utils.h
